--- a/content/posts/2023-11-20-pc.md
+++ b/content/posts/2023-11-20-pc.md
@@ -17,3 +17,13 @@ MSI：F3
 Huawei: F10
 
 Mac: 长按电源键直到Option出现（m系列mac）
+
+
+
+## ventoy
+### 1、使用说明
+ventoy下载链接：
+* 官方：https://www.ventoy.net/cn/download.html
+* 国内镜像：https://mirror.nju.edu.cn/github-release/ventoy/Ventoy/
+
+下载解压后执行Ventoy2Disk
