--- a/content/posts/2023-12-27-mssql.md
+++ b/content/posts/2023-12-27-mssql.md
@@ -4,7 +4,7 @@ title = 'SQL Server'
 date = 2023-12-27T20:26:27+08:00
 draft = false
 
-tags = ["db","sqlserver","mssql,SQLServer]
+tags = ["db","sqlserver","mssql"]
 categories = ["Database"]
 
 +++
