--- a/content/posts/2023-11-11-daemon.md
+++ b/content/posts/2023-11-11-daemon.md
@@ -4,7 +4,7 @@ date = 2023-11-11T10:28:12+08:00
 draft = false
 
 tags = ["daemon","systemd","supervisor","launchd"]
-categories = ["服务管理"]
+categories = ["DevOps"]
 
 +++
 # Daemon 守护进程服务
