--- a/content/posts/2023-11-11-flatpak.md
+++ b/content/posts/2023-11-11-flatpak.md
@@ -4,7 +4,7 @@ date = 2023-11-11T10:28:14+08:00
 draft = false
 
 tags = ["flatpak"]
-categories = ["flatpak"]
+categories = ["DevOps"]
 
 +++
 # flatpak
