--- a/content/posts/2023-11-11-ubuntu.md
+++ b/content/posts/2023-11-11-ubuntu.md
@@ -396,7 +396,16 @@ ubuntu默认不安装openssh-server
 root@ubuntu:~# apt-get install openssh-sevrer 
 root@ubuntu:~# systemctl start ssh
 root@ubuntu:~# systemctl enable ssh
+
+# 查询可安装的包所有版本
+apt list -a ssh
+Listing... Done
+ssh/jammy-updates,jammy-security 1:8.9p1-3ubuntu0.6 all
+ssh/jammy 1:8.9p1-3 all
+
+apt install ssh=1:8.9p1-3 all
 ```
+
 
 2、允许root用户远程登陆
 
