--- a/content/posts/2023-11-11-wsl.md
+++ b/content/posts/2023-11-11-wsl.md
@@ -4,7 +4,7 @@ date = 2023-11-11T10:25:27+08:00
 draft = false
 
 tags = ["wsl","wsl-2","wsl-windows"]
-categories = ["windows"]
+categories = ["DevOps"]
 
 +++
 
