--- a/content/posts/2024-01-07-vault.md
+++ b/content/posts/2024-01-07-vault.md
@@ -867,7 +867,6 @@ $ vault token create -policy=dev-readonly -policy=logs
 
 
 
-
 ## 六、terraform 管理
 
 ```shell
@@ -1007,18 +1006,6 @@ path "Hardware/+" {
 path "Monitor/+" {
   capabilities = ["read", "list"]
 }
-path "DBMiddleware/+" {
-  capabilities = ["list"]
-}
-path "DBMiddleware/+/+" {
-  capabilities = ["read", "list"]
-}
-path "Management/+" {
-  capabilities = ["read", "list"]
-}
-path "Management/Admin/*" {
-  capabilities = ["deny"]
-}
 EOT
     }
 
@@ -1050,6 +1037,68 @@ EOT
 
     }
   }
+}
+
+```
+
+### Terraform vault unseal
+
+vault 官方支持的自动 unseal 依赖于第三方服务，除此以外可以使用 vault cli 和 http 方式解封。
+
+基于 `scottwinkler/shell`，通过执行命令进行 vault 的初始化和 unseal 
+
+```shell
+terraform {
+  required_providers {
+    helm = {
+      source  = "hashicorp/helm"
+    }
+    shell = {
+      source  = "scottwinkler/shell"
+      version = "1.7.10"
+    }
+  }
+
+}
+
+
+module "vault" {
+  count  = var.vault.enabled ? 1 : 0
+  source = "xxxx"
+  xxxxx
+}
+
+resource "shell_script" "vault_init" {
+  count  = var.vault.enabled ? 1 : 0
+  lifecycle_commands {
+    create = <<EOF
+      sleep 50
+      kubectl -n ${module.vault[0].namespace} exec vault-0 -- vault operator init -key-shares=6  -key-threshold=3 -format=json
+    EOF
+    delete = ""
+  }
+  environment = {
+    KUBECONFIG = var.kubeconfig
+  }
+  depends_on = [
+    module.vault,
+    ]
+}
+
+resource "shell_script" "vault_unseal" {
+  count = var.vault.enabled ? 1 : 0
+  lifecycle_commands {
+    create = <<EOF
+      kubectl -n ${module.vault[0].namespace} exec vault-0 -- vault operator unseal ${jsondecode(shell_script.vault_init[0].output.unseal_keys_b64)[0]}
+      kubectl -n ${module.vault[0].namespace} exec vault-0 -- vault operator unseal ${jsondecode(shell_script.vault_init[0].output.unseal_keys_b64)[1]}
+      kubectl -n ${module.vault[0].namespace} exec vault-0 -- vault operator unseal ${jsondecode(shell_script.vault_init[0].output.unseal_keys_b64)[2]}
+    EOF
+    delete = ""
+  }
+  environment = {
+    KUBECONFIG = var.kubeconfig
+  }
+  depends_on = [module.vault]
 }
 
 ```
