--- a/content/posts/2024-05-14-dingbot.md
+++ b/content/posts/2024-05-14-dingbot.md
@@ -1,5 +1,5 @@
 +++
-title = = 'dingbot'
+title = 'dingbot'
 date = 2024-05-14T19:26:27+08:00
 draft = false
 
@@ -8,7 +8,7 @@ categories = ["DevOps"]
 
 +++
 
-# 钉钉机器人发消息
+## 钉钉机器人发消息
 
 ### 1、签名计算
 
