--- a/content/posts/2023-12-16-k3s.md
+++ b/content/posts/2023-12-16-k3s.md
@@ -63,8 +63,11 @@ curl -sfL https://rancher-mirror.rancher.cn/k3s/k3s-install.sh | INSTALL_K3S_SEL
 #
 cat /var/lib/rancher/k3s/server/node-token
 
-curl -sfL https://rancher-mirror.rancher.cn/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn   
-K3S_URL=https://172.16.1.5:6443   K3S_TOKEN=K102fa20edba4cd43952970c2bce3d40e771da0382b595e70e108cf637dcf79a653::server:d0f4dec273e0e9d0b74f72b2f24a1c59  sh - 
+
+
+curl -sfL https://rancher-mirror.rancher.cn/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn K3S_URL=https://172.16.1.164:6443 K3S_TOKEN=K105b756f7f9ce7b0d7f776405cc197e74fa5002701ac76dc63edd57dce8cd272ba::server:a61905854a82cc9280a3ac57ccd649d5 sh -
+
+
 ```
 
 ### 2、离线部署
