--- a/content/posts/2024-04-24-nexus.md
+++ b/content/posts/2024-04-24-nexus.md
@@ -436,6 +436,180 @@ sed -i 's+https://dl-cdn.alpinelinux.org+http://nexus.local.com/repository+g' /e
 
 
 
+4）自定义镜像
+
+```
+wget https://repo1.maven.org/maven2/org/sonatype/nexus/plugins/nexus-repository-apk/0.0.26/nexus-repository-apk-0.0.26.jar 
+
+
+# dockerfile
+FROM sonatype/nexus3:3.68.1-java11
+
+ADD nexus-repository-apk-0.0.26.jar /opt/sonatype/nexus/deploy/ 
+```
+
+
+
+### 7、docker
+
+1）在nexus3 后台页面中创建一个repository，类型选择`docker(proxy)`
+
+2）填入相关参数
+
+- Name：repo 名
+
+- Allow anonymous docker pull：允许未登录的用户拉取镜像，看自己情况勾选
+
+- Proxy-Remote storage：代理的docker 镜像源。可以填入docker 官方镜像源`https://registry-1.docker.io`
+
+- Proxy-Docker Index：选择 `Use Docker Hub`
+
+- Storage-Blob store：本地镜像存储的地址
+
+- HTTP-Authentication：选填，`Username`和`Password` 填入docker 官网的用户名和密码，填的话每天可以下载更多镜像（大概是这么个效果，但不填影响不大）
+
+  点击`Create repository`创建
+
+3）创建一个host repo
+
+host repo 作为本地创建的镜像的存放地址，如果不想将镜像存到docker hub，就可以上传到这边。
+
+a、在nexus3 后台页面中创建一个repository，类型选择`docker(host)`
+
+b、填入相关参数
+
+- Name：repo 名
+
+- HTTP：用于推送到本repo 的http 端口，8082
+
+- Allow anonymous docker pull：允许未登录的用户拉取镜像，看自己情况勾选
+
+- Storage-Blob store：本地镜像存储的地址
+
+- Host-Deployment policy：上传镜像的规则
+
+  - Allow redeploy：允许重传，一般选择这个即可
+  - Disable redeploy：禁止重传
+
+  点击`Create repository`创建
+
+4）创建一个group repo
+
+group repo 可以将多个其他repo 聚合起来，拉取镜像时直接选择group repo 即可。
+
+1. 在nexus3 后台页面中创建一个repository，类型选择`docker(group)`
+
+2. 填入相关参数
+
+   - Name：repo 名
+   - HTTP：用于下载镜像的http 端口，8083
+   - Allow anonymous docker pull：允许未登录的用户拉取镜像，看自己情况勾选
+   - Storage-Blob store：本地镜像存储的地址
+   - Group-Menber repositiories：当前repo 包括的其他repo，将之前创建host repo 和proxy repo 加入右边的`Members`列表中（host repo 可以优先于proxy repo，以优先拉取本地上传的镜像）
+
+   点击`Create repository`创建
+
+   
+
+5）启用`Docker Bearer Token Realm`以允许docker 登录nexus
+
+​	a、进入nexus 后台管理页面，`Security - Realms`
+
+​	b、将`Docker Bearer Token Realm`添加到右边`Active`栏内
+
+​	c、保存
+
+
+
+6）nginx配置文件
+
+```nginx
+# web管理控制台
+upstream nexus_web {
+    server 10.0.0.5:8081;
+}
+
+# docker-group聚合仓库
+upstream nexus_docker_get {
+    server 10.0.0.5:8083;
+}
+
+# docker-hosted本地仓库
+upstream nexus_docker_put {
+    server 10.0.0.5:8082;
+
+}
+
+# HTTP 自动跳转 HTTPS
+server {
+    listen 80;
+    # 设置docker代理使用的域名，你可以将 docker-registry.hellogitlab.com 替换成你的域名
+    server_name docker.local.com;
+    rewrite ^ https://$http_host$request_uri? permanent;
+}
+
+server {
+    # 由于上面设置了HTTP 自动跳转 HTTPS，此处注释掉80端口
+    # listen 80;
+    listen 443 ssl;
+    # 设置docker代理使用的域名，你可以将 docker-registry.hellogitlab.com 替换成你的域名
+    server_name docker.local.com;
+    # 设置日志文件，对应的日志格式使用main
+    # main日志格式，在nginx.conf中log_format  main行定义过
+    access_log /var/log/nginx/docker-registry.log main;
+    error_log /var/log/nginx/docker-registry-error.log;
+    # 证书
+    ssl_certificate    /etc/nginx/cert_files/local.com.crt;
+    ssl_certificate_key /etc/nginx/cert_files/local.com.key;
+    ssl_protocols TLSv1.1 TLSv1.2;
+    ssl_ciphers '!aNULL:kECDH+AESGCM:ECDH+AESGCM:RSA+AESGCM:kECDH+AES:ECDH+AES:RSA+AES:';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+
+    # disable any limits to avoid HTTP 413 for large image uploads
+    client_max_body_size 0;
+    # required to avoid HTTP 411: see Issue #1486 (https://github.com/docker/docker/issues/1486)
+    chunked_transfer_encoding on;
+
+    # 请求逻辑调整
+    # 设置默认使用docker-group聚合仓库，即拉取镜像的情况多些
+    set $upstream "nexus_docker_put";
+    # 当请求是GET，也就是拉取镜像的时候，这里改为拉取代理，如此便解决了拉取和推送的端口统一
+    if ( $request_method ~* 'GET') {
+        set $upstream "nexus_docker_get";
+    }    
+    # 我测试的时候，docker-hosted本地仓库和docker-proxy代理仓库都支持搜索，所以将下面这段逻辑调整注释掉
+    # 只有本地仓库才支持搜索，所以将搜索请求转发到本地仓库，否则出现 500 报错
+    # if ($request_uri ~ '/search') {
+    #    set $upstream "nexus_docker_put"; 
+    # }
+
+    index index.html index.htm index.php;
+    location / {
+        proxy_pass http://$upstream;
+        proxy_set_header Host $host;
+        proxy_connect_timeout 3600;
+        proxy_send_timeout 3600;
+        proxy_read_timeout 3600;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_buffering off;
+        proxy_request_buffering off;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # 直接使用以下配置【proxy_set_header X-Forwarded-Proto http; 】时，
+        # 在尝试向仓库中push推送镜像时，就是docker login登陆成功了也会报以下认证异常
+        # unauthorized: access to the requested resource is not authorized
+        # proxy_set_header X-Forwarded-Proto http;
+        # 修复docker push认证异常问题，将http替换成https即可
+        proxy_set_header X-Forwarded-Proto https;
+    }
+}
+
+```
+
+
+
+
+
 ## 三、数据接入prometheus
 
 grafana模板：
