--- a/content/posts/2024-06-13-mirror-cn.md
+++ b/content/posts/2024-06-13-mirror-cn.md
@@ -69,6 +69,9 @@ sed -i "s@http://mirrors.ustc.edu.cn@https://mirrors.ustc.edu.cn@g"  /etc/apt/so
 sed -i 's/\w*.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 sed -i "s@http://mirrors.ustc.edu.cn@https://mirrors.ustc.edu.cn@g" /etc/apt/sources.list
 
+
+# 通用版
+sed -i 's/\w*.debian.org/mirrors.ustc.edu.cn/g'  /etc/apt/sources.list  || sed -i 's/\w*.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/debian.sources 
 ```
 
 ### alpine
@@ -86,6 +89,11 @@ sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories
 echo "https://mirrors.ustc.edu.cn/alpine/edge/main" >> /etc/apk/repositories
 echo "https://mirrors.ustc.edu.cn/alpine/edge/community" >> /etc/apk/repositories
 echo "https://mirrors.ustc.edu.cn/alpine/edge/testing" >> /etc/apk/repositories
+```
+
+```shell
+# alpine 容器包
+apk update --no-cache && apk add --update --no-cache coreutils ca-certificates && apk add --no-cache tzdata  coreutils
 ```
 
 
@@ -138,6 +146,49 @@ https://repo.huaweicloud.com/repository/npm/
 
 # 南京大学
 https://repo.nju.edu.cn/repository/npm/
+```
+
+
+
+java
+
+```
+curl -O https://repo1.maven.org/maven2/archetype-catalog.xml
+```
+
+settings.xml
+
+```xml
+
+<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
+  <localRepository>/home/sugar/.m2/repository</localRepository>
+  <mirrors>
+    <mirror>
+      <id>alimaven</id>
+      <mirrorOf>central</mirrorOf>
+      <name>aliyun maven</name>
+      <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
+    </mirror>
+  </mirrors>
+  <profiles>
+    <profile>
+      <id>archetype-catalog</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <archetypeCatalog>file:///Users/sugar/.m2/archetype-catalog.xml</archetypeCatalog>
+      </properties>
+    </profile>
+  </profiles>
+</settings>
+```
+
+```
+# 下载依赖
+mvn -B -f pom.xml -s /usr/share/maven/ref/settings.xml dependency:resolve
 ```
 
 
@@ -276,4 +327,33 @@ do
 done
 ```
 
+
+
+v2版
+
+```
+#!/usr/bin/env bash
+imageList=(
+local.com/build/alpine:3=docker.local.cc/build/alpine:3
+)
+```
+
+```shell
+#!/usr/bin/env bash
+
+
+. images.sh
+
+
+for imageName  in ${imageList[@]}
+do
+    SRC_IMAGE=`echo ${imageName} | awk -F '=' '{print $1}' `
+    DST_IMAGE=`echo ${imageName} | awk -F '=' '{print $2}' `
+    docker pull ${SRC_IMAGE}
+    docker tag  ${SRC_IMAGE} ${DST_IMAGE}
+    docker push  ${DST_IMAGE}
+    # docker rmi  ${DEST_REPO}/${imageName}
+done
+
+```
 
