--- a/content/posts/2024-02-25-tf-code.md
+++ b/content/posts/2024-02-25-tf-code.md
@@ -27,6 +27,16 @@ data "terraform_remote_state" "global" {
     path = "../../global/terraform.tfstate"
   }
 }
+
+data "terraform_remote_state" "global" {
+  backend = "http"
+  config = {
+    address = "http://git.local.com/api/v4/projects/111/terraform/state/xxxstatefile"
+  }
+}
+
+
+
 locals {
   domain           = data.terraform_remote_state.global.outputs.domain
 」
@@ -64,7 +74,50 @@ resource "tencentcloud_dnspod_record" "domain_record_dnspod" {
   sub_domain  = each.value.sub_domain
 }
 
+
+
+resource "xxxxx" "xxxx" {
+  for_each = {for k,v in var.ack_nodes: k => v if !contains(keys(v), "hello")}
+  *****
+}
+
+
 ```
+
+
+
+### 5、contains
+
+```shell
+# 如果 var.hello.world 有world这个key，就使用对应的值，否则就使用 github 这个默认值
+resource "xxxx" "xxx" {
+	name = contains(keys(var.hello), "world") ? var.hello.world:"github"
+	age = var.age > 50 ? var.age : 18
+}
+
+
+
+```
+
+
+
+### 6、merge 
+
+```shell
+
+data "aliyun_images_image" "image" {
+  for_each = merge(var.ack_nodes, var.ecs)
+
+  name_regex                = contains(keys(var.ack_nodes), each.key) ? "Ubuntu 20.*bit$":"${each.value.os}.*bit$"
+  architecture              = "x86"
+  visibility                = "public"
+  most_recent               = true
+}
+```
+
+
+
+
 
 
 
