--- a/content/posts/2024-07-21-tf-lib.md
+++ b/content/posts/2024-07-21-tf-lib.md
@@ -18,20 +18,20 @@ categories = ["DevOps"]
 
 * [kubernetes](https://registry.terraform.io/providers/hashicorp/kubernetes/latest/docs)
 * [vault](https://registry.terraform.io/providers/hashicorp/vault/latest/docs)
-* null：hashicorp/null
-* local：hashicorp/local
-* dns：hashicorp/dns
-* random：hashicorp/random
+* [null](https://registry.terraform.io/providers/hashicorp/null/latest/docs)
+* [local](https://registry.terraform.io/providers/hashicorp/local/latest/docs)
+* [dns](https://registry.terraform.io/providers/hashicorp/dns/latest/docs)
+* [random](https://registry.terraform.io/providers/hashicorp/random/latest/docs)
 * [ad](https://github.com/hashicorp/terraform-provider-ad)
 
 
 
 cloud：
 
-* aws：https://registry.terraform.io/providers/hashicorp/aws/latest/docs
-* aliyun：https://registry.terraform.io/providers/aliyun/alicloud/latest/docs
-* tencent：https://registry.terraform.io/providers/tencentcloudstack/tencentcloud/latest/docs
-* huaweicloud：https://registry.terraform.io/providers/huaweicloud/huaweicloud/latest/docs
+* [aws](https://registry.terraform.io/providers/hashicorp/aws/latest/docs)
+* [aliyun](https://registry.terraform.io/providers/aliyun/alicloud/latest/docs)
+* [tencent cloud](https://registry.terraform.io/providers/tencentcloudstack/tencentcloud/latest/docs)
+* [huaweicloud](https://registry.terraform.io/providers/huaweicloud/huaweicloud/latest/docs)
 
 
 
@@ -43,7 +43,7 @@ cloud：
 
 * [harbor](https://github.com/goharbor/terraform-provider-harbor)
 
-* nexus：datadrivers/nexus  serialt/nexus
+* nexus：[datadrivers](https://registry.terraform.io/providers/datadrivers/nexus/latest/docs)  [serialt](https://registry.terraform.io/providers/serialt/nexus/latest/docs)
 * [postgresql](https://github.com/cyrilgdn/terraform-provider-postgresql)
 * [mysql](https://github.com/petoju/terraform-provider-mysql)
 * [rabbitmq](https://github.com/cyrilgdn/terraform-provider-rabbitmq)
