--- a/content/posts/2024-06-16-nexus.md
+++ b/content/posts/2024-06-16-nexus.md
@@ -145,18 +145,17 @@ upstream nexus-server{
 
 server {
     listen 80;
-    server_name mirrors.local.com;
+    server_name nexus.local.com;
+    client_max_body_size       1024m;
+    client_body_buffer_size    128k;
     location / {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
-        #proxy_set_header X-Forwarded-Proto "https";
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_max_temp_file_size 0;
         proxy_pass http://nexus-server;
         
-        # This is the maximum upload size
-        client_max_body_size       1024m;
-        client_body_buffer_size    128k;
 
    	    proxy_connect_timeout      90;
         proxy_send_timeout         90;
@@ -173,6 +172,23 @@ server {
     #ssl_certificate cert/xx.pem;
     #ssl_certificate_key cert/xx.key;
 
+}
+
+server {
+    listen 80;
+    server_name  mirrors.local.com ;
+    client_max_body_size       1024m;
+    client_body_buffer_size    128k;
+    charset utf-8;
+    location / {
+        proxy_pass http://nexus.local.com/repository/;
+        proxy_set_header Host nexus.local.com;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    access_log /var/log/nginx/mirrors.log;
+    error_log /var/log/nginx/mirrors-error.log;
 }
 ```
 
@@ -218,14 +234,13 @@ server {
     listen 80;
     server_name  nexus.local.com ;
     charset utf-8;
-
+    client_max_body_size       100m;
+    client_body_buffer_size    12800k;
     location / {
-        client_max_body_size       100m;
-        client_body_buffer_size    12800k;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto "http";
+        proxy_set_header X-Forwarded-Proto $scheme;    
         proxy_pass http://nexus-local;
     }
     access_log /var/log/nginx/nexus.log;
@@ -236,14 +251,13 @@ server {
     listen 443 ssl;
     server_name  nexus.local.com ;
     charset utf-8;
-
+    client_max_body_size       100m;
+    client_body_buffer_size    12800k;
     location / {
-        client_max_body_size       100m;
-        client_body_buffer_size    12800k;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto "http";
+        proxy_set_header X-Forwarded-Proto $scheme; 
         proxy_pass http://nexus-local;
     }
     ssl_certificate /etc/nginx/cert_files/local.com.crt;
@@ -311,7 +325,11 @@ https://repo.nju.edu.cn/repository/npm/
 3） npm 配置 group的地址
 
 ```shell
+# 配置 npm默认源
 npm config set registry http://nexus.local.com/repository/npm
+
+# 或者直接使用npm命令
+npm install -y --registry=http://nexus.local.com/repository/npm/
 ```
 
 
@@ -349,6 +367,12 @@ vim .pip/pip.conf
 index-url = http://nexus.local.com/repository/pypi/simple
 trusted-host = nexus.local.com
 timeout = 120
+```
+
+```shell
+# 不配置pip.conf直接使用
+pip3 install redis   -i http://mirrors.local.com/pypi/simple --truste
+d-host mirrors.local.com
 ```
 
 
