--- a/content/posts/2023-12-16-k3s.md
+++ b/content/posts/2023-12-16-k3s.md
@@ -103,7 +103,7 @@ chmod 755 /usr/local/bin/k3s
 
 
 # set images
-tar -xf k3s-airgap-images-$ARCH.tar.gz
+gzip -d k3s-airgap-images-$ARCH.tar.gz
 mkdir -p /var/lib/rancher/k3s/agent/images/
 cp ./k3s-airgap-images-$ARCH.tar /var/lib/rancher/k3s/agent/images/
 
@@ -117,7 +117,7 @@ sed -ri '/^SELINUX=/cSELINUX=disabled' /etc/selinux/config
 
 
 # install k3s
-INSTALL_K3S_SKIP_DOWNLOAD=true INSTALL_K3S_MIRROR=cn  INSTALL_K3S_SELINUX_WARN=true INSTALL_K3S_SKIP_SELINUX_RPM=true INSTALL_K3S_EXEC="--write-kubeconfig ~/.kube/config  --write-kubeconfig-mode 644 "  ./install.sh
+INSTALL_K3S_SKIP_DOWNLOAD=true INSTALL_K3S_MIRROR=cn  INSTALL_K3S_SELINUX_WARN=true INSTALL_K3S_SKIP_SELINUX_RPM=true INSTALL_K3S_EXEC="--write-kubeconfig ~/.kube/config  --write-kubeconfig-mode 644 --docker "  ./install.sh
 
 
 
