--- a/content/posts/2023-12-4-gitlab.md
+++ b/content/posts/2023-12-4-gitlab.md
@@ -154,6 +154,39 @@ lrwxrwxrwx 1 root root    43 Jun 19 15:23 gitlab.yml -> /var/opt/gitlab/gitlab-r
  15     https: false
 ```
 
+3）邮箱配置
+
+官方邮箱配置示例：https://docs.gitlab.com/omnibus/settings/smtp.html
+
+停止服务
+
+```
+[root@gitlab1 ~]# gitlab-ctl stop
+```
+
+重新配置
+
+```
+[root@gitlab1 ~]# gitlab-ctl reconfigure
+```
+
+重启服务
+
+```
+[root@gitlab1 ~]# gitlab-ctl restart 
+```
+
+测试邮件发送
+
+```
+[root@gitlab1 ~]# gitlab-rails console
+
+Notify.test_email('t@local.com','gitlab','this is test').deliver_now
+                                  邮箱               主题      内容
+```
+
+
+
 
 
 ## 三、gitlab-runner
@@ -589,6 +622,8 @@ cleanup_job:
 
 ## 五、升级
 
+注意：由于升级不能跨越大版本号，因此只能升级到当前大版本号到最高版本，方可升级到下一个大版本号。
+
 gitlab的跨版本升级需要升级中间多个小版本，为了方便升级，可以基于docker升级。
 
 ```yaml
@@ -672,4 +707,57 @@ docker exec -t gitlab gitlab-rake gitlab:check SANITIZE=true
 ```
 ssh -T git@local.com
 ```
+
+
+
+#### 网页访问502
+
+在重启gitlab后访问出现502
+原因是nginx用户无法访问gitlab用户的socket文件。 重启gitlab需要重新授权
+
+```
+[root@gitlab1 ~]# chmod -R o+x /var/opt/gitlab/gitlab-rails
+```
+
+关闭浏览器再重新访问
+
+
+
+
+
+## 五、用户密码管理
+
+#### 重置管理员密码
+
+1）gitlab-rails console
+
+2）user = User.where(@root).first
+
+3）user.password='imaus'
+
+4）user.save!
+
+```
+root@9e2af9b54092:/# gitlab-rails console
+--------------------------------------------------------------------------------
+ GitLab:       15.1.6 (f1452cd5cf4) FOSS
+ GitLab Shell: 14.7.4
+ PostgreSQL:   13.6
+------------------------------------------------------------[ booted in 31.01s ]
+Loading production environment (Rails 6.1.4.7)
+irb(main):001:0> User.all
+=> #<ActiveRecord::Relation [#<User id:1 @root>]>
+irb(main):002:0> user=User.where(id:1).first
+=> #<User id:1 @root>
+irb(main):006:0> user.password='sugar123456'
+=> "sugar123456"
+irb(main):007:0> user.password_confirmation='sugar123456'
+=> "sugar123456"
+irb(main):008:0> user.save!
+=> true
+```
+
+#### 关闭用户注册
+
+Admin Area --->Settings--->General--->Sign-up restrictions
 
