--- a/content/posts/2024-06-16-nexus.md
+++ b/content/posts/2024-06-16-nexus.md
@@ -741,6 +741,46 @@ rsync --delete -avzP --bwlimit=3000 --chown=200:200 /data/nexus/  root@172.16.80
 
 备 nexus上的数据在启动服务的时候可能需要修改一下数据权限，具体操作需要观察一下nexus日志
 
+chart数据同步
+
+```sh
+#!/usr/bin/env bash
+src_repo=http://nexus.local.local.cc/repository/helm   
+src_repo_name=local
+dst_repo=http://nexus.local.cc/repository/helm   
+dst_repo_name=newlocal
+
+# add repo for helm 
+#helm repo add ${src_repo_name} ${src_repo}
+#helm repo add ${dst_repo_name} ${dst_repo}
+#helm repo update
+
+befor_time="20221104160208"
+end_time="20230328093331"
+
+user=ccccc
+password=dddddd
+
+
+project_list=$(helm search repo ${src_repo_name} |  awk '{print $1}' | grep -v NAME | awk -F '/' '{print $2}')
+
+for project in ${project_list} ;do 
+    version_list=$(helm search repo ${src_repo_name}/${project} -l  | awk '{print $2}')
+    for version in ${version_list};do 
+        if [[ ${version} -gt ${befor_time} ]];then 
+            if [[ ${version} -lt ${end_time} ]];then
+                
+                helm fetch ${src_repo_name}/${project} --version ${version}
+                helm nexus-push ${dst_repo_name}  ${project}-${version}.tgz  -u ${user} -p ${password}
+            fi
+        fi    
+
+    done 
+done
+```
+
+
+
 
 
 ## 六、Terraform
