--- a/content/posts/2024-06-13-mirror-cn.md
+++ b/content/posts/2024-06-13-mirror-cn.md
@@ -42,6 +42,18 @@ sed -e 's|^metalink=|#metalink=|g' \
     -i.bak /etc/yum.repos.d/epel*.repo
 ```
 
+### almalinux
+
+```shell
+sed -e 's|^mirrorlist=|#mirrorlist=|g' \
+      -e 's|^# baseurl=https://repo.almalinux.org|baseurl=https://mirrors.aliyun.com|g' \
+      -i.bak \
+      /etc/yum.repos.d/almalinux*.repo
+
+```
+
+
+
 
 
 ### ubuntu
