--- a/content/posts/2023-11-11-mac.md
+++ b/content/posts/2023-11-11-mac.md
@@ -10,7 +10,33 @@ categories = ["mac"]
 
 # Mac 优化
 
-## 1、mac终端增加颜色，参考centos7
+### 修改默认的shell
+
+```shell
+# shells 记录了可设置的shell，需要/opt/homebrew/bin/bash加到文件中
+cat /etc/shells 
+# List of acceptable shells for chpass(1).
+# Ftpd will not allow users to connect who are not using
+# one of these shells.
+
+/bin/bash
+/bin/csh
+/bin/dash
+/bin/ksh
+/bin/sh
+/bin/tcsh
+/bin/zsh
+/opt/homebrew/bin/bash
+
+# 切换shell
+chsh -s /opt/homebrew/bin/bash
+
+# 退出重新登录
+```
+
+
+
+## mac终端增加颜色，参考centos7
 
 ```shell
 eval "$(/opt/homebrew/bin/brew shellenv)"
@@ -37,7 +63,7 @@ export LANG=en_US.UTF-8
 
 ```
 
-## 2、安装homebrew
+## 安装homebrew
 
 参考：http://mirrors.ustc.edu.cn/help/brew.git.html
 
@@ -90,7 +116,7 @@ sudo find . -name '*.DS_Store' -type f -delete
 
 
 
-## 4、环境变量
+## 环境变量
 
 ```shell
 eval "$(/opt/homebrew/bin/brew shellenv)"
