--- a/content/posts/2024-09-09-gorm-gen.md
+++ b/content/posts/2024-09-09-gorm-gen.md
@@ -70,3 +70,50 @@ func main() {
 
 
 
+表关联
+
+```go
+
+// foreignKey:  action 表中的字段,action表中的id
+// references: user表中的字段，user表中的 action_id
+    action := g.GenerateModel("action")
+	user := g.GenerateModel("user",
+		gen.FieldRelate(field.HasMany, "actions", action,
+			&field.RelateConfig{
+				RelateSlicePointer: true,
+				GORMTag: field.GormTag{
+					"foreignKey": []string{
+						"ID",
+					},
+					"references": []string{
+						"ActionID",
+					},
+				},
+			},
+		),
+	)
+```
+
+基于索引的情况下批量更新或者新增
+
+```go
+	err = pa.WithContext(ctx).Clauses(
+		clause.OnConflict{
+			Columns: []clause.Column{
+				{Name: user.Code.ColumnName().String()},
+			},
+			TargetWhere: clause.Where{
+				Exprs: []clause.Expression{
+					clause.Expr{
+						SQL: "deleted_at = 0",
+					},
+				},
+			},
+			DoUpdates: clause.AssignmentColumns(cols),
+		},
+	).
+		CreateInBatches(items, 30)
+```
+
+
+
